Synchronize code for OnePlus CPH2573_14.0.0.604(EX01) CPH2583_14.0.0.604(EX01)

--- a/kernel_platform/qcom/proprietary/devicetree/oplus/oplus_chg/oplus-chg-22825-EVT1.dtsi
+++ b/kernel_platform/qcom/proprietary/devicetree/oplus/oplus_chg/oplus-chg-22825-EVT1.dtsi
@@ -223,6 +223,7 @@
 					OPLUS_IC_FUNC_GAUGE_GET_DOD0_PASSED_Q
 					OPLUS_IC_FUNC_GAUGE_GET_QMAX
 					OPLUS_IC_FUNC_GAUGE_GET_QMAX_PASSED_Q
+					OPLUS_IC_FUNC_GAUGE_GET_BATT_SN
 				>;
 				virqs = <
 					OPLUS_IC_VIRQ_ERR
