--- a/kernel_platform/qcom/proprietary/devicetree/oplus/oplus_chg/oplus-chg-23607.dtsi
+++ b/kernel_platform/qcom/proprietary/devicetree/oplus/oplus_chg/oplus-chg-23607.dtsi
@@ -1384,8 +1384,9 @@
 		compatible = "oplus,cpa";
 		/* format: <protocol_type power_w> */
 		oplus,protocol_list = <CHG_PROTOCOL_UFCS  33
-				       CHG_PROTOCOL_PD   18
 				       CHG_PROTOCOL_VOOC 100
+				       CHG_PROTOCOL_PPS  33
+				       CHG_PROTOCOL_PD   18
 				       CHG_PROTOCOL_QC   18>;
 		oplus,default_protocol_list = <CHG_PROTOCOL_UFCS
 					       CHG_PROTOCOL_PD
