--- a/kernel_platform/qcom/proprietary/devicetree/Makefile
+++ b/kernel_platform/qcom/proprietary/devicetree/Makefile
@@ -1,10 +1,4 @@
 vendor := $(srctree)/$(src)
 
-ifneq "$(wildcard $(vendor)/qcom)" ""
-#OPLUS_DTS_OVERLAY start
-	#subdir-y += qcom
-#OPLUS_DTS_OVERLAY end
-endif
-#OPLUS_DTS_OVERLAY start
-subdir-y += oplus
-#OPLUS_DTS_OVERLAY end
+subdir-y += qcom
+subdir-y += zte
